example-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8test
  template:
    metadata:
      labels:
        app: k8test
    spec:
      containers:
        - image: siphamandlamzobe/k8test:0126
          imagePullPolicy: IfNotPresent
          name: k8test
          ports:
            - name: k8test
              containerPort: 8080
