example-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: example
  name: example
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  selector:
    app: example
